--- a/bio/style.css
+++ b/bio/style.css
@@ -21,7 +21,8 @@ b{
   font-family: 'Bebas Neue', cursive;
 }
 
-#home-link{
+#home-link,
+#home-link-mobile{
   color:white;
   text-decoration:none;
   border-radius: 10px 10px 0px 0px;
@@ -93,6 +94,11 @@ b{
   border-radius: 50px;
   border: 4px solid rgba(153, 99, 47, 1);
 }
+
+
+.mobile-nav{
+  display: none;
+}
 main{
   width: 80%;
   margin: 100px auto;
@@ -107,7 +113,7 @@ font-size: 20px;
   padding:15px;
   border:2px solid white;
   border-radius: 20px;
-
+  position: relative;
 }
 .inform-box h1{
   font-family: 'Bebas Neue', cursive;
@@ -128,25 +134,35 @@ font-size: 20px;
   margin: 0px 20px;
 }
 
-.Skills{
-  text-align: center;
+.inform-box.softskills{
+  width: 500px;
+  height:300px;
+  position: absolute;
+  right: 0;
+  top:0;
+  margin:15px;
+}
+
+.inform-box.hardskills{
+width: 500px;
+height:300px;
 }
 .study-pharagraph{
-  padding-top: 30px;
+  padding-top: 50px;
+
 }
 
 #start2impact-logo{
   height: 25px;
 }
 footer{
-  text-align: center;
   font-family: 'Bebas Neue', cursive;
   color: white;
   display: flex;
   flex-direction: column;
   font-size: 20px;
   padding:20px;
-
+  text-align: center;
 }
 
 footer a{
@@ -156,4 +172,68 @@ footer a{
 
 footer a:hover{
   color:red;
+}
+
+footer p{
+  color: black;
+  text-align: center;
+}
+
+
+/* Mobile Styles */
+@media only screen and (max-width:1200px) {
+nav{
+  display: none;
+}
+.mobile-nav{
+  display: block;
+  text-align: center;
+}
+
+.logo-page{
+  font-size: 25px;
+}
+.mobile-link{
+padding:20px;
+text-decoration: none;
+color:white;
+display:block;
+}
+
+.page-link{
+display: flex;
+justify-content: center;
+}
+
+.mobile-link.bio{
+  background: linear-gradient(35deg,rgba(153, 99, 47, 1), rgba(205, 133, 63, 1),rgba(230, 194, 160, 1) );
+  border-radius: 0px 0px 0px 30px;
+}
+
+.mobile-link.portfolio{
+  background: linear-gradient(35deg,rgba(114, 64, 114, 1), rgba(152, 86, 152, 1),rgba(204, 171, 204, 1) );
+}
+
+.mobile-link.contacts{
+  background: linear-gradient(   35deg,rgba(25, 84, 134, 1), rgba(34, 113, 179, 1),rgba(145, 185, 217, 1) );
+  border-radius: 0px 0px 30px 0px;
+}
+#about-photo{
+  height: 250px;
+  margin:20px 0px;
+}
+.description{
+  display: block;
+}
+.inform-box{
+  position: flex;
+  flex-direction: column;
+
+}
+.inform-box.hardskills,
+.inform-box.softskills{
+  position: static;
+  margin: 20px 0px;
+  width:100%;
+}
 }
