--- a/bio/style.css
+++ b/bio/style.css
@@ -182,17 +182,34 @@ footer p{
 
 /* Mobile Styles */
 @media only screen and (max-width:1200px) {
+
 nav{
   display: none;
 }
+
+/* page-link size */
+div a{
+  font-size: 60px;
+  font-family: 'Zen Kurenaido', sans-serif;
+}
+
+#profile-photo{
+  height:100px;
+}
+
 .mobile-nav{
   display: block;
   text-align: center;
 }
 
 .logo-page{
-  font-size: 25px;
+  display: flex;
+  justify-content: center;
 }
+.logo-page a{
+  font-size: 85px;
+}
+
 .mobile-link{
 padding:20px;
 text-decoration: none;
@@ -219,15 +236,17 @@ justify-content: center;
   border-radius: 0px 0px 30px 0px;
 }
 #about-photo{
-  height: 250px;
+  height:500px;
   margin:20px 0px;
 }
 .description{
   display: block;
+  font-size: 60px;
 }
 .inform-box{
   position: flex;
   flex-direction: column;
+  text-align: center;
 
 }
 .inform-box.hardskills,
@@ -235,5 +254,26 @@ justify-content: center;
   position: static;
   margin: 20px 0px;
   width:100%;
+  height: 100%;
 }
+
+.inform-box p{
+  font-size: 50px;
+}
+
+.inform-box h2,
+.inform-box h1{
+  font-size: 70px;
+}
+
+#start2impact-logo{
+  height: 50px;
+}
+
+footer a,
+footer p{
+  font-size: 50px;
+}
+
+
 }
